完成user主页导航页

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,10 +79,12 @@
       <nav id="sidebar">
         <!-- Sidebar Header-->
         <div class="sidebar-header d-flex align-items-center">
-          <div class="avatar"><img src="img/avatar-6.png" alt="..." class="img-fluid rounded-circle"></div>
-          <div class="title">
-            <h1 class="h5" id="UsernameInfo">User</h1>
-          </div>
+            <div class="avatar">
+              <a href="userHome.html" ><img src="img/avatar-6.png" alt="..." class="img-fluid rounded-circle"></a>
+            </div>
+            <div class="title">
+              <a href="userHome.html"><h1 class="h5" id="UsernameInfo">User</h1></a>
+            </div>
         </div>
         <!-- 左侧导航栏各项功能 -->
         <span class="heading">Main</span>
