--- a/src/main/resources/templates/userHome.html
+++ b/src/main/resources/templates/userHome.html
@@ -37,6 +37,16 @@
     .avatar-block{
         margin-top: 10%;
     }
+    .el-divider {
+        background-color: #343a40;
+        position: relative;
+    }
+    .el-divider__text {
+        position: absolute;
+        background-color: #22252a;
+        padding: 0px 20px;
+        color: rgb(138, 141, 147);
+    }
   </style>
 </head>
 <body>
@@ -90,7 +100,7 @@
     </div>
   </nav>
 </header>
-<div class="d-flex align-items-stretch">
+<div class="d-flex align-items-stretch" id="app">
   <!-- 左边导航栏 -->
   <nav id="sidebar">
     <!-- Sidebar Header-->
@@ -99,7 +109,7 @@
         <a href="userHome.html" ><img src="img/avatar-6.png" alt="..." class="img-fluid rounded-circle"></a>
       </div>
       <div class="title">
-        <a href="userHome.html"><h1 class="h5" id="UsernameInfo">User</h1></a>
+        <a href="userHome.html"><h1 class="h5" id="UsernameInfo">{{userInfo.username}}</h1></a>
       </div>
     </div>
     <!-- 左侧导航栏各项功能 -->
@@ -124,29 +134,46 @@
   </nav>
   <!-- Sidebar Navigation end-->
 
-  <div class="page-content" id="app">
+  <div class="page-content">
     <el-container class="container">
       <el-aside style="margin: 2% 1%;">
         <div class="avatar-block">
           <el-avatar :size="100" src="img/avatar-6.png" style="display: flex; margin: auto"></el-avatar>
-          <div style="margin: 4% auto; text-align: center">User</div>
+          <div style="margin: 4% auto; text-align: center">{{userInfo.username}}</div>
         </div>
         <el-menu
+            default-active="1"
             style="border-right: #343a40"
             background-color="#343a40"
             text-color="#8a8d93"
             active-text-color="#DB6574">
-          <el-menu-item index="1">
+          <el-menu-item index="1" @click="switch_page(1)">
             <i class="el-icon-user"></i>
             <span>个人信息</span>
           </el-menu-item>
-          <el-menu-item index="2">
+          <el-menu-item index="2" @click="switch_page(2)">
             <i class="el-icon-setting"></i>
             <span>密码设置</span>
           </el-menu-item>
         </el-menu>
       </el-aside>
-      <el-main style="background-color: blue">main</el-main>
+      <el-main>
+        <div v-if='active_page === 1'>
+          <el-divider content-position="left">user information</el-divider>
+          <div>
+            <p>real name: {{userInfo.realName}}</p>
+            <p>birth day: {{userInfo.birthday}}</p>
+            <p>email: {{userInfo.email}}</p>
+            <p>phone: {{userInfo.phone}}</p>
+            <p>level: {{userInfo.level}}</p>
+          </div>
+          <el-divider content-position="left">avatar</el-divider>
+          <div> content 1.2</div>
+        </div>
+        <div v-else>
+          content 2
+        </div>
+      </el-main>
     </el-container>
   </div>
 
@@ -164,9 +191,42 @@
 <!-- element 组件库 -->
 <script src="https://unpkg.com/element-ui/lib/index.js"></script>
 <script>
-    new Vue({
+    const vm = new Vue({
         el: "#app",
-    })
+        data: {
+            active_page: 1,
+            userInfo: {
+                username: "user",
+                realName: "user",
+                birthday: "yy-mm-dd",
+                phone: "12345678",
+                email: "foo@bar.com",
+                level: 0
+            }
+        },
+        mounted: function () {
+            const this_ = this;
+            $.ajax({
+                type: "get",
+                url: "http://localhost:8080/user/getUserInfo",
+                async: true,
+                success: function (res) {
+                    this_.userInfo = res
+                },
+                error: function () {
+                    console.log("获取用户信息失败");
+                }
+            });
+        },
+        methods: {
+            switch_page: function (index) {
+                if (this.active_page === index)
+                    return
+                this.active_page = index
+                // console.log("switch to page " + this.active_page)
+            }
+        }
+    });
 </script>
 </body>
 </html>
