开发数据上传页面

--- a/src/main/resources/templates/taskLists.html
+++ b/src/main/resources/templates/taskLists.html
@@ -97,6 +97,7 @@
       <li><a href="map"> <i class="fa fa-map"></i>Heat map </a></li>
       <li><a href="visualization2"> <i class="fa fa-align-left"></i>Statistics </a></li>
       <li><a href="download"><i class="fa fa-download"></i>Download </a></li>
+      <li><a href="upload"><i class="fa fa-upload"></i>Upload</a>
       <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-bars"></i>Task management</a>
         <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
           <li><a href="#">Publish task</a></li>
