--- a/src/main/resources/templates/mytasks.html
+++ b/src/main/resources/templates/mytasks.html
@@ -26,7 +26,8 @@
 	        <li><a href="visualization2">Statistics</a></li>
 	        <li><a href="mytasks">My tasks</a></li>
 	        <li><a href="download">Download</a></li>
-	      </ul>
+					<li><a href="upload"><i class="fa fa-upload"></i>Upload</a>
+				</ul>
 	    </div>
 	    <a id="menu-toggle" href="#" class=" ">&#9776;</a> 
 	  </div>
