--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -91,12 +91,13 @@
         <!-- 左侧导航栏各项功能 -->
         <span class="heading">Main</span>
         <ul class="list-unstyled">
-          <li class="active"><a href="index"> <i class="fa fa-home"></i>Home </a></li>
+          <li><a href="index"> <i class="fa fa-home"></i>Home </a></li>
           <!--<li><a href="tables"> <i class="fa fa-bar-chart"></i>Task Information </a></li>-->
           <li><a href="taskLists"> <i class="fa fa-bar-chart"></i>Task lists </a></li>
           <li><a href="map"> <i class="fa fa-map"></i>Heat map </a></li>
           <li><a href="visualization2"> <i class="fa fa-align-left"></i>Statistics </a></li>
           <li><a href="download"><i class="fa fa-download"></i>Download </a></li>
+          <li class="active"><a href="upload"><i class="fa fa-upload"></i>Upload</a></li>
           <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-bars"></i>Task management</a>
             <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
               <li><a href="#">Publish task</a></li>
@@ -193,5 +194,6 @@
     <script src="/vendor/jquery-validation/jquery.validate.min.js"></script>
     <script src="/js/front.js"></script>
     <script src="/js/dataFileUpload.js"></script>
+    <script src="/js/userNameCookie.js"></script>
   </body>
 </html>
