任务管理三个页面的入口

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -98,9 +98,9 @@
           <li><a href="upload"><i class="fa fa-upload"></i>Upload</a>
           <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-bars"></i>Task management</a>
             <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
-              <li><a href="#">Publish task</a></li>
-              <li><a href="#">Accept task</a></li>
-              <li><a href="#">Administrator operation</a></li>
+              <li><a href="publishTask.html">Publish task</a></li>
+              <li><a href="acceptTask.html">Accept task</a></li>
+              <li><a href="administratorOperation.html">Administrator operation</a></li>
               <li><a href="task_data">Task Data</a></li>
             </ul>
           </li>
