--- a/src/main/resources/templates/userHome.html
+++ b/src/main/resources/templates/userHome.html
@@ -161,6 +161,27 @@
             <p>phone: {{userInfo.phone}}</p>
             <p>level: {{userInfo.level}}</p>
           </div>
+<!--          <el-form ref="info_form" :model="info_form" label-width="20%">-->
+<!--            <el-form-item label="real name">-->
+<!--              <el-input v-model="info_form.realName" :placeholder="userInfo.realName"></el-input>-->
+<!--            </el-form-item>-->
+<!--            <el-form-item label="birth day">-->
+<!--              <el-input v-model="info_form.birthday" :placeholder="userInfo.birthday"></el-input>-->
+<!--            </el-form-item>-->
+<!--            <el-form-item label="email">-->
+<!--              <el-input v-model="info_form.email" :placeholde="userInfo.email"></el-input>-->
+<!--            </el-form-item>-->
+<!--            <el-form-item label="phone">-->
+<!--              <el-input v-model="info_form.phone" :placeholder="userInfo.phone"></el-input>-->
+<!--            </el-form-item>-->
+<!--            <el-form-item label="level">-->
+<!--              <el-input v-model="info_form.level" :disabled="true" :placeholder="userInfo.level"></el-input>-->
+<!--            </el-form-item>-->
+<!--            <el-form-item>-->
+<!--              <el-button>修改</el-button>-->
+<!--              <el-button>取消</el-button>-->
+<!--            </el-form-item>-->
+<!--          </el-form>-->
           <el-divider content-position="left">avatar</el-divider>
           <div>
             <p>Upload a new avatar!</p>
