任务管理页面导航栏active位置

--- a/src/main/resources/templates/publishTask.html
+++ b/src/main/resources/templates/publishTask.html
@@ -89,16 +89,16 @@
     <!-- 左侧导航栏各项功能 -->
     <span class="heading">Main</span>
     <ul class="list-unstyled">
-      <li class="active"><a href="index"> <i class="fa fa-home"></i>Home </a></li>
+      <li><a href="index"> <i class="fa fa-home"></i>Home </a></li>
       <!--<li><a href="tables"> <i class="fa fa-bar-chart"></i>Task Information </a></li>-->
       <li><a href="taskLists"> <i class="fa fa-bar-chart"></i>Task lists </a></li>
       <li><a href="map"> <i class="fa fa-map"></i>Heat map </a></li>
       <li><a href="visualization2"> <i class="fa fa-align-left"></i>Statistics </a></li>
       <li><a href="download"><i class="fa fa-download"></i>Download </a></li>
       <li><a href="upload"><i class="fa fa-upload"></i>Upload</a>
-      <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-bars"></i>Task management</a>
+      <li><a href="#exampledropdownDropdown" aria-expanded="true" data-toggle="collapse"> <i class="fa fa-bars"></i>Task management</a>
         <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
-          <li><a href="publishTask.html">Publish task</a></li>
+          <li class="active"><a href="publishTask.html">Publish task</a></li>
           <li><a href="acceptTask.html">Accept task</a></li>
           <li><a href="administratorOperation.html">Administrator operation</a></li>
           <li><a href="task_data">Task Data</a></li>
