--- a/src/main/resources/templates/task_data.html
+++ b/src/main/resources/templates/task_data.html
@@ -97,11 +97,11 @@
           <li><a href="visualization2"> <i class="fa fa-align-left"></i>Statistics </a></li>
           <li><a href="download"><i class="fa fa-download"></i>Download </a></li>
           <li><a href="upload"><i class="fa fa-upload"></i>Upload</a>
-          <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="fa fa-bars"></i>Task management</a>
+          <li><a href="#exampledropdownDropdown" aria-expanded="true" data-toggle="collapse"> <i class="fa fa-bars"></i>Task management</a>
             <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
-              <li><a href="#">Publish task</a></li>
-              <li><a href="#">Accept task</a></li>
-              <li><a href="#">Administrator operation</a></li>
+              <li><a href="publishTask.html">Publish task</a></li>
+              <li><a href="acceptTask.html">Accept task</a></li>
+              <li><a href="administratorOperation.html">Administrator operation</a></li>
               <li class="active"><a href="task_data">Task Data</a></li>
             </ul>
           </li>
