--- a/src/main/resources/templates/acceptTask.html
+++ b/src/main/resources/templates/acceptTask.html
@@ -117,7 +117,76 @@
   <div class="page-content">
     <div class="page-header">
       <div class="container-fluid">
-        <h2 class="h5 no-margin-bottom">accept task</h2>
+        <h2 class="h5 no-margin-bottom">Accept Task</h2>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <ul class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index">Home</a></li>
+        <li class="breadcrumb-item active">AcceptTask</li>
+      </ul>
+    </div>
+    <div class="public-user-block block container-fluid">
+      <div class="row d-flex align-items-center">
+        <div class="col-lg-3 d-flex align-items-center">
+          <div class="order">1</div>
+          <div class="avatar"> <img src="img/mockup4.jpg" alt="..." class="img-fluid"></div><a href="#" class="name"><strong class="d-block">task 1</strong><span class="d-block">Daily Life</span></a>
+        </div>
+        <div class="col-lg-5 text-center">Metro data in Xi'an</div>
+        <div class="col-lg-4">
+          <div class="details d-flex">
+            <div class="item"><i class="fa fa-gg"></i><strong>200</strong></div>
+            <div class="item"><a id="csv1" href="#">accept</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="public-user-block block container-fluid">
+      <div class="row d-flex align-items-center">
+        <div class="col-lg-3 d-flex align-items-center">
+          <div class="order">2</div>
+          <div class="avatar"> <img src="img/mockup6.jpg" alt="..." class="img-fluid"></div><a href="#" class="name"><strong class="d-block">task 2</strong><span class="d-block">City Traffic</span></a>
+        </div>
+        <div class="col-lg-5 text-center">Camera sensor data in Beijing</div>
+        <div class="col-lg-4">
+          <div class="details d-flex">
+            <div class="item"><i class="fa fa-gg"></i><strong>200</strong></div>
+            <div class="item"><a id="csv2" href="#">accept</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="public-user-block block container-fluid">
+      <div class="row d-flex align-items-center">
+        <div class="col-lg-3 d-flex align-items-center">
+          <div class="order">3</div>
+          <div class="avatar"> <img src="img/mockup7.jpg" alt="..." class="img-fluid"></div><a href="#" class="name"><strong class="d-block">task 3</strong><span class="d-block">Public Safety</span></a>
+        </div>
+        <div class="col-lg-5 text-center">Unmanned Vehicle Perception Results Data in Northwestern Polytechnical University,Chang'an campus</div>
+        <div class="col-lg-4">
+          <div class="details d-flex">
+            <div class="item"><i class="fa fa-gg"></i><strong>200</strong></div>
+            <div class="item"><a id="csv3" href="#">accept</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="public-user-block block container-fluid">
+      <div class="row d-flex align-items-center">
+        <div class="col-lg-3 d-flex align-items-center">
+          <div class="order">4</div>
+          <div class="avatar"> <img src="img/mockup5.jpg" alt="..." class="img-fluid"></div><a href="#" class="name"><strong class="d-block">task 4</strong><span class="d-block">entertainment</span></a>
+        </div>
+        <div class="col-lg-5 text-center">Road network distribution data in Chengdu</div>
+        <div class="col-lg-4">
+          <div class="details d-flex">
+            <div class="item"><i class="fa fa-gg"></i><strong>200</strong></div>
+            <div class="item"><a id="csv4" href="#">accept</a></div>
+          </div>
+        </div>
       </div>
     </div>
     <footer class="footer">
@@ -139,6 +208,5 @@
 <script src="/vendor/jquery-validation/jquery.validate.min.js"></script>
 <script src="/js/charts-home.js"></script>
 <script src="/js/front.js"></script>
-<script src="/js/index.js"></script>
 </body>
 </html>
